sandc/test/fixtures/astRegression/shouldFail/productions/type/NullableGenericInstantiation.sand
pub class NullableGenericInstantiation {
    foo(): T?<A> {
        
    }
}